[package]
name = "ffeeder"
version = "0.1.0"
authors = ["Igor Rudym <irudym@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = "0.8.0"
paho-mqtt = "0.9.1"
log = "0.4.13"
env_logger = "0.8.2"
uuid = { version = "0.8", features = ["serde", "v4"] }
serde_json = "1.0.64"
mysql = "20.1.0"
websocket = "0.26.2"